Added emacs config install

--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -1,2 +1,8 @@
 - name: Include OS-specific install tasks
   include_tasks: "{{ ansible_os_family }}.yml"
+
+- name: Install my emacs config
+  git:
+    repo: 'https://github.com/OlivierCazade/emacs.git'
+    dest: ~/.emacs.d
+    update: no
