--- a/roles/dotfiles/tasks/liquidprompt.yml
+++ b/roles/dotfiles/tasks/liquidprompt.yml
@@ -8,3 +8,10 @@
   file:
     path: ~/.dotfiles/liquidprompt
     state: directory
+
+- name : Add configuration files
+  template:
+    src: "{{ item.src }}"
+    dest: "{{ item.dest }}"
+  with_items:
+    - { src: 'liquidprompt.source', dest: '~/.dotfiles/liquidprompt/source.sh' }
