Added emacs fonts install

--- a/roles/emacs/tasks/Darwin.yml
+++ b/roles/emacs/tasks/Darwin.yml
@@ -2,3 +2,8 @@
   homebrew_cask:
     name: emacs
     state: present
+
+- name: Install emacs fonts from homebrew cask
+  homebrew_cask:
+    name: font-firacode-nerd-font-mono
+    state: present
