--- a/roles/emacs/tasks/Darwin.yml
+++ b/roles/emacs/tasks/Darwin.yml
@@ -7,3 +7,8 @@
   homebrew_cask:
     name: font-firacode-nerd-font-mono
     state: present
+
+- name: Install ispell (used by emacs flyspell)
+  homebrew:
+    name: ispell
+    state: present
