--- a/roles/additional-app/tasks/Darwin.yml
+++ b/roles/additional-app/tasks/Darwin.yml
@@ -7,3 +7,8 @@
   homebrew_cask:
     name: iterm2
     state: present
+
+- name: Install spotify from homebrew cask
+  homebrew_cask:
+    name: spotify
+    state: present
