Added shellcheck installation

--- a/roles/emacs/tasks/Darwin.yml
+++ b/roles/emacs/tasks/Darwin.yml
@@ -12,3 +12,8 @@
   homebrew:
     name: ispell
     state: present
+
+- name: Install shellcheck (used by flymake)
+  homebrew:
+    name: shellcheck
+    state: present
