Added kubectx installation

--- a/roles/kubernetes-cli/tasks/Darwin.yml
+++ b/roles/kubernetes-cli/tasks/Darwin.yml
@@ -2,3 +2,8 @@
   homebrew:
     name: "kubernetes-cli"
     state: present
+
+- name: Install kubectx
+  homebrew:
+    name: "kubectx"
+    state: present
