Added skaffold installation

--- a/roles/kubernetes-cli/tasks/Darwin.yml
+++ b/roles/kubernetes-cli/tasks/Darwin.yml
@@ -7,3 +7,8 @@
   homebrew:
     name: "kubectx"
     state: present
+
+- name: Install skaffold
+  homebrew:
+    name: "skaffold"
+    state: present
